# minknow_api

./: .travis.yml  API_TOKENS.md  AUTH.md  BREAKING_CHANGES_IN_4.0.md  BREAKING_CHANGES_IN_5.0.md  BREAKING_CHANGES_IN_6.0.md  BUILD.md  Cargo.toml  LICENSE.txt  LIMS_README.md  README.md  build.rs  daemon.proto  dev-requirements.txt  flow_ui.proto  protocol_return_info.proto  protocol_ui.proto  raw_data_sampler.proto
.github/workflows/: pypi-publish.yml
bream/: experiment_estimated_end.proto  mux_scan_results.proto  platform_qc_results.proto  protocol_communication.proto
examples/: .gitignore  list_devices.py  start_protocol.py
gui/: experiment_groups.proto
minknow/: reads.proto
minknow/rpc/: acquisition.proto  analysis_configuration.proto  basecaller.proto  data.proto  device.proto  instance.proto  keystore.proto  log.proto  manager.proto  minion_device.proto  promethion_device.proto  protocol.proto  rpc_options.proto  statistics.proto
proto/minknow_api/: acquisition.proto  analysis_configuration.proto  analysis_workflows.proto  basecaller.proto  data.proto  debug.proto  device.proto  hardware_check.proto  instance.proto  keystore.proto  log.proto  manager.proto  minion_device.proto  pebble_device.proto  promethion_device.proto  protocol.proto  protocol_settings.proto  read_end_reason.proto  report_data.proto  rpc_options.proto  run_until.proto  statistics.proto
proto/util/: README.md  code.proto  status.proto
python/: .gitignore  README.md  setup.py
python/examples/: README.md  extract_run_statistics.py  (+2 more)
src/: lib.rs  mock_minknow_server.rs
(+148 files in other folders)
