[package]
name = "minknow-api-rust"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.txt"
readme = "README.md"
description = "Protobuf and gRPC specifications for the MinKNOW API with a Rust implementation"
repository = "https://github.com/dayzerodx/minknow_api_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.8", features = ["transport", "tls", "tls-roots", "tls-webpki-roots"] }
prost = "0.11"
prost-types = "0.11"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.22", features = ["macros", "rt-multi-thread", "fs"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic-openssl = "0.2"
async-stream = "0.3"
tower = "0.4"
hyper-openssl = "0.9"
hyper = "0.14"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
lazy_static = "1.4"

[build-dependencies]
tonic-build = "0.8"
